WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214189
ASSERT(!m_peerConnection.isClosed()) on imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-operations.https.html
https://bugs.webkit.org/show_bug.cgi?id=214189
Summary
ASSERT(!m_peerConnection.isClosed()) on imported/w3c/web-platform-tests/webrt...
Truitt Savell
Reported
2020-07-10 09:05:45 PDT
imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-operations.https.html This newly imported test is crashing on Debug wk2 History:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebrtc%2FRTCPeerConnection-operations.https.html
Log: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x00000004cbe235de WTFCrash + 14 (Assertions.cpp:295) 1 com.apple.WebCore 0x00000004ada912ab WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebCore 0x00000004af9cf458 WebCore::PeerConnectionBackend::addPendingTrackEvent(WebCore::PeerConnectionBackend::PendingTrackEvent&&) + 120 (PeerConnectionBackend.cpp:302) 3 com.apple.WebCore 0x00000004add957b3 WebCore::LibWebRTCMediaEndpoint::addPendingTrackEvent(WTF::Ref<WebCore::RTCRtpReceiver, WTF::DumbPtrTraits<WebCore::RTCRtpReceiver> >&&, WebCore::MediaStreamTrack&, std::__1::vector<rtc::scoped_refptr<webrtc::MediaStreamInterface>, std::__1::allocator<rtc::scoped_refptr<webrtc::MediaStreamInterface> > > const&, WTF::RefPtr<WebCore::RTCRtpTransceiver, WTF::DumbPtrTraits<WebCore::RTCRtpTransceiver> >&&) + 531 (LibWebRTCMediaEndpoint.cpp:370) 4 com.apple.WebCore 0x00000004add96131 WebCore::LibWebRTCMediaEndpoint::newTransceiver(rtc::scoped_refptr<webrtc::RtpTransceiverInterface>&&) + 353 (LibWebRTCMediaEndpoint.cpp:399) 5 com.apple.WebCore 0x00000004addb1472 WebCore::LibWebRTCMediaEndpoint::OnTrack(rtc::scoped_refptr<webrtc::RtpTransceiverInterface>)::$_9::operator()() + 98 (LibWebRTCMediaEndpoint.cpp:490) 6 com.apple.WebCore 0x00000004addb135e WTF::Detail::CallableWrapper<WebCore::LibWebRTCMediaEndpoint::OnTrack(rtc::scoped_refptr<webrtc::RtpTransceiverInterface>)::$_9, void>::call() + 30 (Function.h:52)
Attachments
Patch
(3.28 KB, patch)
2020-07-24 07:20 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-07-10 09:06:02 PDT
<
rdar://problem/65343941
>
Chris Dumez
Comment 2
2020-07-10 09:16:08 PDT
Updated expectations in <
https://trac.webkit.org/changeset/264223
>.
youenn fablet
Comment 3
2020-07-24 07:20:22 PDT
Created
attachment 405142
[details]
Patch
EWS
Comment 4
2020-07-24 10:13:28 PDT
Committed
r264836
: <
https://trac.webkit.org/changeset/264836
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405142
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug