ASSERT(!m_peerConnection.isClosed()) on imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-operations.https.html https://bugs.webkit.org/show_bug.cgi?id=214189 <rdar://problem/65343941>

Reviewed by Eric Carlson.

Source/WebCore:

Covered by unskipped tests.

* Modules/mediastream/PeerConnectionBackend.cpp:
(WebCore::PeerConnectionBackend::addPendingTrackEvent):
This can be called in case the connection is closed but should not be in case the connection is stopped.
Update the ASSERT accordingly.

LayoutTests:

* TestExpectations: Unskip test.


Canonical link: https://commits.webkit.org/227562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264836 268f45cc-cd09-0410-ab3c-d52691b4dbfc